@@ -1,3 +1,6 @@
+2003-04-22  Theodore W. Leung  <twl@dev>
+	* Update conditionalhttp to work when comments are present
+
 2003-04-20  Theodore W. Leung  <twl@dev>
 	* Update autoping to use new pyblosxom internals
 
